Bug 303446 - Kdepimlibs (master) fail to compile with -DKDE4_ENABLE_FINAL=1
Summary: Kdepimlibs (master) fail to compile with -DKDE4_ENABLE_FINAL=1
Status: RESOLVED FIXED
Alias: None
Product: kdepimlibs
Classification: Applications
Component: kholidays (other bugs)
Version First Reported In: GIT (master)
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: John Layt
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-12 23:57 UTC by Hrvoje Senjan
Modified: 2012-07-13 07:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hrvoje Senjan 2012-07-12 23:57:38 UTC
Here's the output:

[ 33%] Building CXX object kholidays/CMakeFiles/kholidays.dir/kholidays_final_cpp.o
cd kholidays && /usr/bin/c++   -DMAKE_KHOLIDAYS_LIB -DKDE_USE_FINAL -D_BSD_SOURCE -D_XOPEN_SOURCE=500 -D_BSD_SOURCE -DQT_NO_STL -DQT_NO_CAST_TO_ASCII -D_REENTRANT -DKDE_DEPRECATED_WARNINGS -DKDE4_CMAKE_TOPLEVEL_DIR_LENGTH=13 -DQT_USE_FAST_CONCATENATION -DQT_USE_FAST_OPERATOR_PLUS -DKDE_DEFAULT_DEBUG_AREA=5350 -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -D_FORTIFY_SOURCE=2  -Wnon-virtual-dtor -Wno-long-long -ansi -Wundef -Wcast-align -Wchar-subscripts -Wall -W -Wpointer-arith -Wformat-security -fno-exceptions -DQT_NO_EXCEPTIONS -fno-check-new -fno-common -Woverloaded-virtual -fno-threadsafe-statics -fvisibility=hidden -Werror=return-type -fvisibility-inlines-hidden -DNDEBUG -DQT_NO_DEBUG -fPIC -I. -I../../kholidays -I../.. -I.. -I../../kholidays/parsers/plan2 -I/usr/include/KDE -I/usr/include/qt4/phonon -I/usr/include/qt4/QtXmlPatterns -I/usr/include/qt4/QtXml -I/usr/include/qt4/QtWebKit -I/usr/include/qt4/QtUiTools -I/usr/include/qt4/QtTest -I/usr/include/qt4/QtSvg -I/usr/include/qt4/QtSql -I/usr/include/qt4/QtScriptTools -I/usr/include/qt4/QtScript -I/usr/include/qt4/QtOpenGL -I/usr/include/qt4/QtNetwork -I/usr/include/qt4/QtHelp -I/usr/include/qt4/QtDesigner -I/usr/include/qt4/QtDeclarative -I/usr/include/qt4/QtDBus -I/usr/include/qt4/Qt3Support -I/usr/include/qt4/QtGui -I/usr/include/qt4/QtCore -I/usr/include/qt4/Qt -I/usr/share/qt4/mkspecs/default -I/usr/include/qt4    -D_GNU_SOURCE -D_LARGEFILE64_SOURCE -o CMakeFiles/kholidays.dir/kholidays_final_cpp.o -c kholidays_final_cpp.cpp
In file included from kholidays_final_cpp.cpp:12:0:
holidayparserplan.cpp:59:6: warning: "YYENABLE_NLS" is not defined [-Wundef]
In file included from kholidays_final_cpp.cpp:7:0:
/build/buildd/kdepimlibs-4.8.97git/kholidays/sunriseset.cpp:28:15: error: redefinition of 'double PI'
In file included from kholidays_final_cpp.cpp:6:0:
/build/buildd/kdepimlibs-4.8.97git/kholidays/lunarphase.cpp:156:15: error: 'double PI' previously defined here
In file included from kholidays_final_cpp.cpp:9:0:
holidayscannerplan.lpp: In member function 'virtual KHolidays::HolidayParserPlan::token_type KHolidays::HolidayScannerPlan::lex(KHolidays::HolidayParserPlan::semantic_type*, KHolidays::HolidayParserPlan::location_type*)':
holidayscannerplan.lpp:154:18: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
In file included from kholidays_final_cpp.cpp:9:0:
holidayscannerplan.lpp:155:18: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
In file included from kholidays_final_cpp.cpp:9:0:
holidayscannerplan.lpp:178:18: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
In file included from kholidays_final_cpp.cpp:9:0:
holidayscannerplan.lpp:202:18: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
In file included from kholidays_final_cpp.cpp:9:0:
holidayscannerplan.lpp:226:18: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
In file included from kholidays_final_cpp.cpp:9:0:
holidayscannerplan.lpp:251:18: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
In file included from kholidays_final_cpp.cpp:9:0:
holidayscannerplan.lpp:274:18: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
In file included from kholidays_final_cpp.cpp:9:0:
holidayscannerplan.lpp:297:18: warning: deprecated conversion from string constant to 'char*' [-Wwrite-strings]
In file included from kholidays_final_cpp.cpp:10:0:
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/holidayparserdriver.cpp: In member function 'virtual void KHolidays::HolidayParserDriver::setParseCalendar(const QString&)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/holidayparserdriver.cpp:113:59: warning: 'static KCalendarSystem* KCalendarSystem::create(const QString&, const KLocale*)' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:83) [-Wdeprecated-declarations]
In file included from kholidays_final_cpp.cpp:11:0:
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'int KHolidays::HolidayParserDriverPlan::adjustedMonthNumber(int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:177:40: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'QDate KHolidays::HolidayParserDriverPlan::easter(int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:242:40: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'QDate KHolidays::HolidayParserDriverPlan::pascha(int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:263:40: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:264:40: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:275:44: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:279:44: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
In file included from kholidays_final_cpp.cpp:11:0:
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'void KHolidays::HolidayParserDriverPlan::setFromWeekdayInMonth(int, int, int, int, int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:440:86: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'void KHolidays::HolidayParserDriverPlan::setFromRelativeWeekday(int, int, int, int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:493:86: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'void KHolidays::HolidayParserDriverPlan::setFromDate(int, int, int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:581:86: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'void KHolidays::HolidayParserDriverPlan::setFromEaster(int, int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:641:86: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'void KHolidays::HolidayParserDriverPlan::setFromPascha(int, int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:661:86: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp: In member function 'void KHolidays::HolidayParserDriverPlan::setEvent(int, int, int)':
/build/buildd/kdepimlibs-4.8.97git/kholidays/parsers/plan2/holidayparserdriverplan.cpp:676:86: warning: 'virtual QString KCalendarSystem::calendarType() const' is deprecated (declared at /usr/include/KDE/../kcalendarsystem.h:245) [-Wdeprecated-declarations]
make[4]: *** [kholidays/CMakeFiles/kholidays.dir/kholidays_final_cpp.o] Error 1
make[4]: Leaving directory `/build/buildd/kdepimlibs-4.8.97git/obj-x86_64-linux-gnu'
make[3]: *** [kholidays/CMakeFiles/kholidays.dir/all] Error 2
make[3]: *** Waiting for unfinished jobs....
In file included from akonadi-kde_final_cpp.cpp:129:0:
/build/buildd/kdepimlibs-4.8.97git/akonadi/typepluginloader.cpp:120:13: warning: 'bool Akonadi::operator<(const QString&, const Akonadi::PluginEntry&)' defined but not used [-Wunused-function]
In file included from akonadi-kde_final_cpp.cpp:129:0:
/build/buildd/kdepimlibs-4.8.97git/akonadi/typepluginloader.cpp:201:13: warning: 'bool Akonadi::operator<(const Akonadi::MimeTypeEntry&, const Akonadi::MimeTypeEntry&)' defined but not used [-Wunused-function]
/build/buildd/kdepimlibs-4.8.97git/akonadi/typepluginloader.cpp:206:13: warning: 'bool Akonadi::operator<(const Akonadi::MimeTypeEntry&, const QString&)' defined but not used [-Wunused-function]
/build/buildd/kdepimlibs-4.8.97git/akonadi/typepluginloader.cpp:211:13: warning: 'bool Akonadi::operator<(const QString&, const Akonadi::MimeTypeEntry&)' defined but not used [-Wunused-function]
/build/buildd/kdepimlibs-4.8.97git/akonadi/typepluginloader.cpp:216:16: warning: 'QString Akonadi::format(const QString&, const QVector<int>&)' defined but not used [-Wunused-function]
Linking CXX shared library ../lib/libakonadi-kde.so
cd akonadi && /usr/bin/cmake -E cmake_link_script CMakeFiles/akonadi-kde.dir/link.txt --verbose=1
/usr/bin/c++  -fPIC -O2 -fstack-protector --param=ssp-buffer-size=4 -Wformat -Werror=format-security -D_FORTIFY_SOURCE=2  -Wnon-virtual-dtor -Wno-long-long -ansi -Wundef -Wcast-align -Wchar-subscripts -Wall -W -Wpointer-arith -Wformat-security -fno-exceptions -DQT_NO_EXCEPTIONS -fno-check-new -fno-common -Woverloaded-virtual -fno-threadsafe-statics -fvisibility=hidden -Werror=return-type -fvisibility-inlines-hidden -fexceptions -UQT_NO_EXCEPTIONS -DNDEBUG -DQT_NO_DEBUG -Wl,--enable-new-dtags -Wl,--fatal-warnings -Wl,--no-undefined -lc  -Wl,-Bsymbolic-functions -Wl,-z,relro -Wl,--as-needed -Wl,--no-undefined -shared -Wl,-soname,libakonadi-kde.so.4 -o ../lib/libakonadi-kde.so.4.8.0 CMakeFiles/akonadi-kde.dir/akonadi-kde_final_cpp.o CMakeFiles/akonadi-kde.dir/akonadi-kde_automoc.o CMakeFiles/akonadi-kde.dir/notificationmanagerinterface.o CMakeFiles/akonadi-kde.dir/notificationsourceinterface.o CMakeFiles/akonadi-kde.dir/agentmanagerinterface.o CMakeFiles/akonadi-kde.dir/tracerinterface.o CMakeFiles/akonadi-kde.dir/controlinterface.o CMakeFiles/akonadi-kde.dir/resourceadaptor.o CMakeFiles/akonadi-kde.dir/preprocessoradaptor.o CMakeFiles/akonadi-kde.dir/statusadaptor.o CMakeFiles/akonadi-kde.dir/controladaptor.o CMakeFiles/akonadi-kde.dir/transportadaptor.o CMakeFiles/akonadi-kde.dir/searchadaptor.o CMakeFiles/akonadi-kde.dir/resourcebasesettings.o /usr/lib/x86_64-linux-gnu/libQtNetwork.so /usr/lib/x86_64-linux-gnu/libQtDBus.so /usr/lib/x86_64-linux-gnu/libQtSql.so /usr/lib/libkdeui.so.5.8.0 /usr/lib/libkio.so.5.8.0 /usr/lib/libsolid.so.4.8.0 /usr/lib/libakonadiprotocolinternals.so.1.8.50 /usr/lib/x86_64-linux-gnu/libQtNetwork.so /usr/lib/x86_64-linux-gnu/libQtXml.so /usr/lib/libkdeui.so.5.8.0 /usr/lib/x86_64-linux-gnu/libQtGui.so /usr/lib/x86_64-linux-gnu/libQtSvg.so /usr/lib/libkdecore.so.5.8.0 /usr/lib/x86_64-linux-gnu/libQtDBus.so /usr/lib/x86_64-linux-gnu/libQtCore.so 
cd akonadi && /usr/bin/cmake -E cmake_symlink_library ../lib/libakonadi-kde.so.4.8.0 ../lib/libakonadi-kde.so.4 ../lib/libakonadi-kde.so
make[4]: Leaving directory `/build/buildd/kdepimlibs-4.8.97git/obj-x86_64-linux-gnu'
/usr/bin/cmake -E cmake_progress_report /build/buildd/kdepimlibs-4.8.97git/obj-x86_64-linux-gnu/CMakeFiles  5 6 7 8 9 10 11
[ 33%] Built target akonadi-kde
make[3]: Leaving directory `/build/buildd/kdepimlibs-4.8.97git/obj-x86_64-linux-gnu'
make[2]: *** [all] Error 2
make[2]: Leaving directory `/build/buildd/kdepimlibs-4.8.97git/obj-x86_64-linux-gnu'
dh_auto_build: make -j2 returned exit code 2
make[1]: *** [pre_build_dh_auto_build] Error 2
make[1]: Leaving directory `/build/buildd/kdepimlibs-4.8.97git'
make: *** [debian/dhmk_build] Error 2
dpkg-buildpackage: error: debian/rules build gave error exit status 2

Reproducible: Always

Steps to Reproduce:
Try to compile master kdepimlibs with -DKDE4_ENABLE_FINAL=1
Actual Results:  
Fails to compile (4.9 RC2 compiles fine)

Expected Results:  
Should compile

Probably fails due to:
http://quickgit.kde.org/index.php?p=kdepimlibs.git&a=commitdiff&h=1c07bcdae0a483a3cf7ca5439db203fa83ef5df2
Comment 1 Laurent Montel 2012-07-13 07:35:33 UTC
Git commit 85d64017d70e6cdf57b3ee9232890c24c2cb126c by Montel Laurent.
Committed on 13/07/2012 at 09:35.
Pushed by mlaurent into branch 'master'.

Fix Bug 303446 - Kdepimlibs (master) fail to compile with

-DKDE4_ENABLE_FINAL=1

M  +2    -2    kholidays/sunriseset.cpp

http://commits.kde.org/kdepimlibs/85d64017d70e6cdf57b3ee9232890c24c2cb126c