Fix Bug 303446 - Kdepimlibs (master) fail to compile with

-DKDE4_ENABLE_FINAL=1

BUG: 303446